add docker and automate script to push on heroku server

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ALLOW_ORIGINS=["http://localhost:3000", "http://192.168.1.107:3000"]
+ALLOW_ORIGINS=["http://localhost:3000", "http://192.168.1.107:3000", "https://camel-race-results.herokuapp.com"]
 PORT=8080
